# OrbitESC

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  OrbitESC.code-workspace  PreLoad.cmake  checkout_submodules.sh  env_setup.sh  environment.yml  motor_control.pb.c  motor_control.pb.h  pyproject.toml  serial_interface.pb.c  spawn_container.sh  system_control.pb.c  system_data.pb.c
src/: .clang-format  CMakeLists.txt  OrbitESC.lds  startup.cpp  version.hpp
src/config/: orbit_esc_cfg.hpp
src/config/aurora/: aurora_datastore_types_prj.hpp  aurora_user_filesystem_config.hpp
src/config/bsp/: CMakeLists.txt  board_map.cpp  board_map.hpp  board_map_luminary.hpp  board_map_v1.hpp  board_map_v2.hpp  board_map_v3.hpp
src/config/fatfs/: ffconf.h
src/config/flashdb/: fal_cfg.h  fdb_cfg.h
src/config/freertos/: FreeRTOSConfig.h
src/config/segger/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h  orbit_segger_cfg.hpp
src/config/thor/: thor_adc_prj_config.hpp  thor_user_config.hpp
src/config/tinyusb/: tusb_config.h
src/control/: CMakeLists.txt  current_control.cpp  current_control.hpp  filter.hpp  foc_control.cpp  foc_data.cpp  foc_data.hpp  foc_driver.cpp  foc_driver.hpp  foc_math.cpp  foc_math.hpp  foc_motor.cpp  foc_motor.hpp  foc_observer.cpp  foc_observer.hpp  pid.cpp  pid.hpp  speed_control.cpp  speed_control.hpp  system_control.cpp  system_control.hpp  system_observer.cpp  system_observer.hpp
src/control/estimator/: system_observer.cpp
src/control/hardware/: current_control.cpp  current_control.hpp  speed_control.cpp  speed_control.hpp
src/control/math/: pid.cpp  pid.hpp
src/control/modes/: sys_mode_armed.cpp  sys_mode_armed.hpp  sys_mode_base.cpp  sys_mode_base.hpp  sys_mode_fault.cpp  sys_mode_fault.hpp  sys_mode_idle.cpp  sys_mode_idle.hpp  sys_mode_park.cpp  sys_mode_park.hpp  sys_mode_ramp.cpp  sys_mode_ramp.hpp  sys_mode_run.cpp  sys_mode_run.hpp
src/control/subroutines/: declarations.hpp  idle.cpp  interface.hpp  optimize_sample_point.cpp  optimize_sample_point.hpp  rotor_align.cpp  rotor_align.hpp  rotor_detector.cpp  rotor_detector.hpp  rotor_ramp.cpp  rotor_ramp.hpp  subroutines.cpp  subroutines.hpp
src/control/subroutines/idle/: idle_subroutine.cpp  idle_subroutine.hpp
src/core/: CMakeLists.txt  bootup.cpp  bootup.hpp  syscalls.cpp  system.cpp  system.hpp  system_types.hpp  tasks.cpp  tasks.hpp  utility.cpp  utility.hpp
src/core/com/: CMakeLists.txt  can_async_message.hpp  can_com.cpp  can_com.hpp  can_com_intf.hpp  can_message.cpp  can_message.hpp  can_message_intf.hpp  can_periodic_message.cpp  can_periodic_message.hpp  can_router.hpp  can_server.cpp  can_server.hpp  com_app_tx.cpp  com_app_tx.hpp  com_scheduler.cpp  com_scheduler.hpp  com_types.hpp
src/core/com/can/: can_async_message.hpp  can_message.hpp  can_message_intf.hpp  can_periodic_message.cpp  can_periodic_message.hpp  can_router.hpp  can_server.cpp  can_server.hpp
src/core/com/proto/: motor_control.pb.c  motor_control.pb.h  motor_control.proto  proto_defs.hpp  serial_interface.pb.c  serial_interface.pb.h  serial_interface.proto  system_config.pb.c  system_config.pb.h  system_config.proto  system_control.pb.c  system_control.pb.h  system_control.proto  system_data.pb.c  system_data.pb.h  system_data.proto
src/core/com/routers/: can_arm_router.cpp  can_ehalt_router.cpp  can_mode_router.cpp  can_ping_router.cpp  can_reset_router.cpp  can_speed_router.cpp
src/core/com/serial/: interface.pb.c  interface.pb.h  interface.proto  interface_pb2.py  serial_async_message.cpp  serial_async_message.hpp  serial_config.hpp  serial_interface.pb.c  serial_interface.pb.h  serial_interface.proto  serial_message.hpp  serial_router.hpp  serial_server.cpp  serial_server.hpp  serial_sink.cpp  serial_sink.hpp  serial_usb.cpp  serial_usb.hpp
src/core/data/: CMakeLists.txt  orbit_data.cpp  orbit_data.hpp  orbit_data_defaults.hpp  orbit_data_internal.hpp  orbit_data_params.hpp  orbit_data_storage.cpp  orbit_data_storage.hpp  orbit_data_types.cpp  orbit_data_types.hpp  orbit_data_validators.cpp  orbit_data_validators.hpp  orbit_log_io.cpp  orbit_log_io.hpp  orbit_log_sink.cpp  orbit_log_sink.hpp
src/core/data/persistent/: orbit_database.cpp  orbit_database.hpp  orbit_filesystem.cpp  (+1 more)
src/core/events/: CMakeLists.txt  event_stream.cpp  event_stream.hpp  event_types.hpp
src/core/hw/: CMakeLists.txt  drv8301.hpp  orbit_adc.cpp  orbit_adc.hpp  orbit_can.cpp  orbit_can.hpp  orbit_gpio.cpp  orbit_gpio.hpp  orbit_i2c.cpp  orbit_i2c.hpp  orbit_instrumentation.cpp  orbit_instrumentation.hpp  orbit_isr_config.hpp  orbit_led.cpp  orbit_led.hpp  orbit_motor.cpp  orbit_motor.hpp  orbit_motor_drive.cpp  orbit_motor_drive.hpp  orbit_motor_sense.cpp  orbit_motor_sense.hpp  orbit_sdio.cpp  orbit_sdio.hpp  orbit_sensor.cpp  orbit_sensor.hpp  orbit_spi.cpp  orbit_spi.hpp  orbit_timer.cpp  orbit_timer.hpp  orbit_tusb.c  orbit_tusb.h  orbit_usart.cpp  orbit_usart.hpp  orbit_usb.cpp  orbit_usb.hpp  orbit_usb_intf.h
src/core/runtime/: CMakeLists.txt  adc_runtime.cpp  adc_runtime.hpp  can_runtime.cpp  can_runtime.hpp  serial_runtime.cpp  serial_runtime.hpp
src/core/tasks/: CMakeLists.txt  tsk_cdc.cpp  tsk_cdc.hpp  tsk_com.cpp  tsk_com.hpp  tsk_ctl.cpp  tsk_ctl.hpp  tsk_ctrl_sys.cpp  tsk_ctrl_sys.hpp  tsk_dio.cpp  tsk_dio.hpp  tsk_hwm.cpp  tsk_hwm.hpp  tsk_hwm_dio.cpp  tsk_hwm_dio.hpp  tsk_idle.cpp  tsk_idle.hpp  tsk_usb.cpp  tsk_usb.hpp
src/integration/Aurora/: file_types_prj.hpp
src/integration/Chimera/: threading_types_prj.hpp
src/monitor/: CMakeLists.txt  orbit_analog_monitor.hpp  orbit_current_monitor.cpp  orbit_current_monitor.hpp  orbit_metrics.cpp  orbit_metrics.hpp  orbit_monitors.cpp  orbit_monitors.hpp  orbit_voltage_monitor.cpp  orbit_voltage_monitor.hpp
src/monitor/debug/: segger_modules.cpp  segger_modules.hpp  segger_modules_intf.h  segger_stubs.cpp
src/simulator/: CMakeLists.txt  sim_adc.cpp  sim_adc.hpp  sim_motor.cpp  sim_motor.hpp  sim_tsk.cpp  sim_tsk.hpp  sim_usb_serial.cpp
src/testing/: CMakeLists.txt  system_control.cpp  system_control.hpp
(+198 files in other folders)
